# walrus

./: README.md  pyproject.toml  requirements.txt  scaled_m4.ipynb  scaled_peak_detection.py  test.ipynb  translated_peak_detection.py  translated_speech.py
scripts/: scaled_m4.py  scaled_speech.py  scaled_synth.py  translated_m4.py  translated_synth.py
src/safari/: Frame_Builder.py  SSM_Builder.py  SSM_Solver.py  Test_Function_Generator.py  Utils.py  __init__.py
src/safari.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
